--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
 
 html {
   font-size: 100%;
+  height: -webkit-fill-available;
 }
 
 body {
@@ -14,6 +15,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   height: 100%;
+  min-height: -webkit-fill-available;
 }
 
 code {
@@ -21,9 +23,12 @@ code {
     monospace;
 }
 
-.pop-ups {
+/* .pop-ups {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   -ms-filter: "progid:DXImageTransform.Microsoft.Matrix(M11=1, M12=0, M21=0, M22=1, SizingMethod='auto expand')";
+} */
+#root {
+  min-height: 100%;
 }
