--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,11 @@
 .App {
   text-align: center;
   min-height: 100%;
+  height: 100% !important;
+  width: 100% !important;
 }
 
 .map {
-  height: 100%;
-  min-height: 100%;
+  height: 100% !important;
+  min-height: 100% !important;
 }
